--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a href="http://localhost:8080/chats/">Начать чат</a>
+<a href="http://localhost:8080/room/">Начать чат</a>
 
 </body>
 </html>
