Room's COMPLETE | Chat Function Worked

--- a/static/templates/room.html
+++ b/static/templates/room.html
@@ -8,32 +8,49 @@
         function main() {
             if ("WebSocket" in window) {
 
-                const ws = new WebSocket("ws://localhost:8080");
+                const getRoomId = new XMLHttpRequest();
+                getRoomId.open("GET", "http://localhost:8080/api/room/", false);
+                getRoomId.send();
 
-                let chatArea = document.querySelector("#chat-area");
-
-                ws.onopen = function () {
-                    console.log("WebSocket Opened");
-                };
-
-                ws.onclose = function () {
-                    console.log("WebSocket closed.");
-                };
-
-                ws.onmessage = function (evt) {
-                    const msg = evt.data;
-                    chatArea.insertAdjacentText("afterbegin", msg);
-                };
-
-                function sendMessage() {
-                    ws.send(inputSend.value);
-                }
+                console.log(getRoomId.status);
 
                 let inputSend = document.getElementById("chat-sendArea");
                 let button = document.querySelector("#chat-sendButton");
 
-                button.addEventListener('click', sendMessage);
+                if (getRoomId.status === 200) {
+                    let json = JSON.parse(getRoomId.responseText);
+                    const room_id = json["RESPONSE"]["ROOM_ID"];
 
+                    const ws = new WebSocket(`ws://localhost:8080/ws/?room_id=${room_id}`);
+
+                    let chatArea = document.querySelector("#chat-area");
+
+                    ws.onopen = function () {
+                        console.log("WebSocket Opened");
+                    };
+
+                    ws.onclose = function () {
+                        console.log("WebSocket closed.");
+                    };
+
+                    ws.onmessage = function (evt) {
+                        const msg = evt.data;
+                        chatArea.value += msg;
+                    };
+
+                    function sendMessage() {
+                        ws.send(inputSend.value);
+                    }
+
+                    button.addEventListener('click', sendMessage);
+
+                    let addedHref = document.querySelector("#chat-addHref");
+                    addedHref.href = `http://localhost:8080/room/add/?room_id=${room_id}`;
+                    addedHref.textContent = `http://localhost:8080/room/add/?room_id=${room_id}`;
+
+                } else {
+                    console.log("Get Room Id Failed");
+                }
 
             } else {
                 alert("This browser does not support WebSockets.");
@@ -44,13 +61,20 @@
 </head>
 <body onload="main()">
 
-<textarea id="chat-area" readonly="true"></textarea>
+<label for="chat-area">
+    <textarea id="chat-area" readonly="true"></textarea>
+</label>
 
 <form>
-    <input id="chat-sendArea">
-    <input type="button" id="chat-sendButton" value="Отправить">
+    <label for="chat-sendArea">
+        <input id="chat-sendArea">
+    </label>
+    <label>
+        <input type="button" id="chat-sendButton" value="Отправить">
+    </label>
 </form>
 
+<a id="chat-addHref"></a>
 
 </body>
 </html>
