--- a/static/templates/addedRoom.html
+++ b/static/templates/addedRoom.html
@@ -1,13 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Ваша комната</title>
-</head>
-<body>
+    <script type="text/javascript">
+        function main() {
+            if ("WebSocket" in window) {
 
-<textarea id="chat-area"></textarea>
-<button>Отправить</button>
+                let addedRoom_ID = document.URL;
+                addedRoom_ID = addedRoom_ID[addedRoom_ID.length - 1];
+
+                const getRoomId = new XMLHttpRequest();
+                getRoomId.open("GET", `http://localhost:8080/api/room/?room_id=${addedRoom_ID}`, false);
+                getRoomId.send();
+
+                let inputSend = document.getElementById("chat-sendArea");
+                let button = document.querySelector("#chat-sendButton");
+
+                if (getRoomId.status === 200) {
+                    let json = JSON.parse(getRoomId.responseText);
+                    const room_id = json["RESPONSE"]["ROOM_ID"];
+
+                    const ws = new WebSocket(`ws://localhost:8080/ws/?room_id=${room_id}`);
+
+                    let chatArea = document.querySelector("#chat-area");
+
+                    ws.onopen = function () {
+                        console.log("WebSocket Opened");
+                    };
+
+                    ws.onclose = function () {
+                        console.log("WebSocket closed.");
+                    };
+
+                    ws.onmessage = function (evt) {
+                        const msg = evt.data;
+                        chatArea.value += msg;
+                    };
+
+                    function sendMessage() {
+                        ws.send(inputSend.value);
+                    }
+
+                    button.addEventListener('click', sendMessage);
+
+                    let addedHref = document.querySelector("#chat-addHref");
+                    addedHref.href = `http://localhost:8080/room/add/?room_id=${room_id}`;
+                    addedHref.textContent = `http://localhost:8080/room/add/?room_id=${room_id}`;
+
+                } else {
+                    console.log("Get Room Id Failed");
+                }
+
+            } else {
+                alert("This browser does not support WebSockets.");
+            }
+        }
+    </script>
+
+</head>
+<body onload="main()">
+
+<label for="chat-area">
+    <textarea id="chat-area" readonly="true"></textarea>
+</label>
+
+<form>
+    <label for="chat-sendArea">
+        <input id="chat-sendArea">
+    </label>
+    <label>
+        <input type="button" id="chat-sendButton" value="Отправить">
+    </label>
+</form>
+
+<a id="chat-addHref"></a>
 
 </body>
 </html>
