update Server params

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link rel="stylesheet" href="../styles/styles.css">
     <meta charset="UTF-8">
     <title>CPP Chat</title>
-    CPP Chat
 </head>
 <body>
 
-<a href="http://localhost:8080/room/">Начать чат</a>
+<h1 id="mainPageHeader">CPP Chat For Anonymous User's</h1>
+<a id="startchat" href="http://localhost:8080/room/">Начать чат</a>
 
 </body>
 </html>
