--- a/static/templates/addedRoom.html
+++ b/static/templates/addedRoom.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -22,7 +21,7 @@
                     let json = JSON.parse(getRoomId.responseText);
                     const room_id = json["RESPONSE"]["ROOM_ID"];
 
-                    const ws = new WebSocket(`ws://localhost:8080/ws/?room_id=${room_id}`);
+                    let ws = new WebSocket(`ws://localhost:8080/ws/?room_id=${room_id}`);
 
                     let chatArea = document.querySelector("#chat-area");
 
@@ -31,6 +30,7 @@
                     };
 
                     ws.onclose = function () {
+                        ws = new WebSocket(`ws://localhost:8080/ws/?room_id=${room_id}`);
                         console.log("WebSocket closed.");
                     };
 
