--- a/static/templates/addedRoom.html
+++ b/static/templates/addedRoom.html
@@ -3,6 +3,7 @@
 
     <meta charset="UTF-8">
     <title>Ваша комната</title>
+    <link rel="stylesheet" href="../styles/styles.css">
     <script type="text/javascript" src="/scripts/addedRoom.js"></script>
 </head>
 <body onload="main()">
