--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -7,7 +7,10 @@
 <body>
 
 <h1 id="mainPageHeader">CPP Chat For Anonymous User's</h1>
-<a id="startchat" href="http://localhost:8080/room/">Начать чат</a>
+
+<h3>
+    <a class="blocktext" id="startchat" href="http://localhost:8080/room/">Начать чат</a>
+</h3>
 
 </body>
 </html>
