--- a/static/templates/room.html
+++ b/static/templates/room.html
@@ -3,6 +3,7 @@
 
     <meta charset="UTF-8">
     <title>Ваша комната</title>
+    <link rel="stylesheet" href="../styles/styles.css">
     <script type="text/javascript" src="/scripts/room.js"></script>
 
 </head>
@@ -14,7 +15,7 @@
 
 <form>
     <label for="chat-sendArea">
-        <input id="chat-sendArea">
+        <input id="chat-sendArea" rows="854" cols="480">
     </label>
     <label>
         <input type="button" id="chat-sendButton" value="Отправить">
